# DeepRL

./: CMakeLists.txt  blob_data.json  deepNN_gpt.cpp  samples.cpp  tensor.cpp  testing.cpp  testing.py
Python/: SimpleNN.ipynb  autograd.ipynb  network.ipynb  tensors.ipynb  testing.ipynb
